# pipes-storm

./: .gitignore  AUTHORS  LICENSE  README.md  haskell-storm.cabal  pipes-storm.cabal
src/: HaskellStorm.hs
src/HaskellStorm/: IO.hs  Internal.hs  Pipes.hs  System.hs
src/Pipes/: Storm.hs
src/Pipes/Storm/: IO.hs  Internal.hs  Pipelines.hs  Pipes.hs  System.hs
test/: HaskellStormSpec.hs  PipesStormSpec.hs
