Name:                   pipes-storm
Version:                0.0.1
Author:                 Aaron Levin <aaron.levin@demeure.com>
Maintainer:             Aaron Levin <aaron.levin@demeure.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.18
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Pipes.Storm
  Other-Modules:        Pipes.Storm.Internal
  Build-Depends:        base >= 4 && < 5
                      , aeson
                      , async
                      , bytestring
                      , pipes
                      , pipes-concurrency
                      , scientific
                      , text
                      , transformers
                      , unix
                      , vector

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , aeson
                      , async
                      , bytestring
                      , hspec
                      , pipes
                      , pipes-concurrency
                      , scientific
                      , text
                      , transformers
                      , unix
                      , unordered-containers
                      , vector

Source-Repository head
  Type:                 git
--  Location:             
